add resource limit for k8s

--- a/Kubernetes/code/golang/ultimate-service/zarf/k8s/base/deployment-sale-api.yaml
+++ b/Kubernetes/code/golang/ultimate-service/zarf/k8s/base/deployment-sale-api.yaml
@@ -17,3 +17,10 @@ spec:
       containers:
       - image: service-amd64:1.0
         name: service-amd64
+        # limit resource to 100m for sales-api container
+        resources:
+          limits:
+            cpu: 100m
+          requests:
+            cpu: 100m
+
